--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 1999-08-08  Martin Junius  <mj@fido.de>
 
 	======= Release 4.3.5 ================================================
+	------- CVS tag R435a ------------------------------------------------
+	------- CVS ci -------------------------------------------------------
+
+	* sendmail/mklinks (DIRS): create DIRS if needed.
+
 	------- CVS tag R435 -------------------------------------------------
 	------- CVS ci -------------------------------------------------------
 
