--- a/TODO
+++ b/TODO
@@ -4,6 +4,12 @@
 	* rfc2ftn: mime_deheader() für alle RFC-Header ->
 	  Fido-Something
 
+	* get rid of the fidogate_exit(), exit.c stuff. Is/will this
+	  be used anyway???
+
+	* ffx/ffxqt: removed compression/decompression (handled by
+	  ftnpack).
+
 
         * ftn2rfc: if charset_set_in_out() fails, try to use a
 	  matching table for the input charset. eg if input charset
