--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2000-04-19  Martin Junius  <mj@fido.de>
+
+	------- CVS ci -------------------------------------------------------
+
+	* scripts/run/Makefile (install): no more special install target
+	  for point and orodruin.
+
+	* scripts/run/runpoll.sh: updated.
+
+	* scripts/run/runpoll-binkd.sh: updated.
+
+	* scripts/run/runpoll-orodruin.sh: updated.
+
 2000-04-11  Martin Junius  <mj@fido.de>
 
 	======= Release 4.4.1 ================================================
