--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2000-06-01  Martin Junius  <mj@fido.de>
+
+	------- CVS ci -------------------------------------------------------
+
+	* scripts/maintenance/logcheck.pl: more bells and whistles ... ;-)
+
 2000-04-19  Martin Junius  <mj@fido.de>
 
 	------- CVS ci -------------------------------------------------------
